# catkin_ws_multi_floor

./: .gitignore  IMPROVED_ASTAR_DERIVATION.md  README.md  仿真实验环境及任务说明.md
experiments/astar_comparison/: README.md  baseline_case1.csv  experiment_points.csv  export_path_from_bag.py  improved_case1.csv  plot_path_overlay.py  plot_results.py  results_template.csv
experiments/astar_single_layer_benchmark/: EXPERIMENT_PLAN.md  README.md
experiments/astar_single_layer_benchmark/configs/: expansion_trace_template.csv  experiment_points_case1.csv  experiment_points_template.csv  map_scenarios_template.csv  path_trace_template.csv  results_template.csv
experiments/astar_single_layer_benchmark/maps/: README.md  contrast_case1.pgm  contrast_case1.yaml  single_layer_eval.pgm  single_layer_eval.yaml
experiments/astar_single_layer_benchmark/results/: expansion_trace.csv  path_trace.csv
experiments/astar_single_layer_benchmark/scripts/: build_contrast_map.py  build_synthetic_map.py  export_path_trace_from_bag.py  generate_offline_traces.py  map_utils.py  plot_expansion_comparison.py  plot_path_comparison.py  plot_region_recognition.py  plot_results.py  run_batch_placeholder.py  summarize_metrics.py
src/improved_global_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/improved_global_planner/cfg/: ImprovedGlobalPlanner.cfg
src/improved_global_planner/include/improved_global_planner/: astar.h  dijkstra.h  expander.h  gradient_path.h  grid_path.h  improved_astar.h  orientation_filter.h  planner_core.h  potential_calculator.h  quadratic_calculator.h  traceback.h
src/improved_global_planner/src/: astar.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  improved_astar.cpp  orientation_filter.cpp  planner_core.cpp  quadratic_calculator.cpp
src/jackal_elevator/: CMakeLists.txt  README.MD  package.xml
src/jackal_elevator/launch/: jackal_elevator_nav.launch  (+2 more)
src/robot-multi-floor-navigation/: README.md
(+244 files in other folders)
